# sanbox

./: .gitignore  CLAUDE.md  README.md  package.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: main.rs
backend/src-tauri/: tauri.conf.json
backend/src/debugger/: breakpoints.rs  cdp_client.rs  mod.rs
backend/src/ipc/: commands.rs
backend/src/plugins/: mod.rs  plugin_loader.rs  plugin_trait.rs
backend/src/runner/: deno_runner.rs  mod.rs  node_runner.rs  process_isolation.rs  runtime_manager.rs  sandbox.rs  wasm_sandbox.rs
backend/src/security/: limits.rs  mod.rs  permissions.rs  validator.rs
backend/src/utils/: mod.rs  transpiler.rs
frontend/: components.json  index.html  jsconfig.json  package.json  test-evaluator.js  test-live-evaluator.js  test_liveEvaluator.js  vite.config.js
frontend/plugins/: example.console.json
frontend/src/: App copy.jsx  App.jsx  main.jsx  oldstyle.css  styles.css
frontend/src/components/: AppSidebar.jsx  AppSidebar.tsx  ConsolePanel.jsx  CustomTitleBar.jsx  DebuggerPanel.jsx  Explorer.jsx  GroupIcons.jsx  Metrics.jsx  RuntimeSelector.jsx  StatusBar.jsx
frontend/src/components/console/: README.md
frontend/src/components/debugger/: README.md
frontend/src/components/editor/: CodeEditor.jsx
frontend/src/components/theme/: theme-provider.jsx  theme-toggle.jsx
frontend/src/components/ui/: button.jsx  dropdown-menu.jsx  menubar.jsx
frontend/src/contexts/: StatusBarContext.jsx
frontend/src/hooks/: useConsoleStream.js  useHotkeys.js  useIpc.js
frontend/src/ipc/: client.js
frontend/src/lib/: evalWorker.js  historyStore.js  liveEvaluator.js  sessionStore.js  settingsStore.js  themes.js  transpileSource.js
frontend/src/state/: appState.js
frontend/src/styles/: main.css
