[package]
name = "runjs-pro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.30"
wait-timeout = "0.2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time", "io-util"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
url = "2"
wasmtime = { version = "26", default-features = false, features = ["cranelift"], optional = true }
tauri = { version = "2", features = [] }
swc_common = { version = "21.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "23.0.0"
swc_ecma_codegen = "26.0.1"
swc_ecma_parser = "39.0.0"
swc_ecma_transforms_base = "42.0.0"
swc_ecma_transforms_react = "46.0.0"
swc_ecma_transforms_typescript = "46.0.0"
swc_ecma_visit = "23.0.0"

[features]
default = []
wasm-engine = ["dep:wasmtime"]
